<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/menu_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_logo"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:textSize="60sp" />

    <Button
        android:id="@+id/menu_btnStudy"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_Study"
        android:onClick="gotoStudy"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/menu_btnQuiz"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_Quiz"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/menu_btnAbout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_About"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/menu_btnSetting"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_Setting"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/menu_btnExit"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/menu_Exit"
        android:onClick="gotoExit"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"/>

</LinearLayout>