<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudyCard">

    <TextView
        android:id="@+id/studyCard_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text=""
        android:textSize="60sp"
        app:layout_constraintTop_toBottomOf="@id/studyCard_infoSound"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/studyCard_infoSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:visibility="invisible"
        android:text="@string/studyCard_sound"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


    <TextView
        android:id="@+id/studyCard_infoHiragana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:visibility="invisible"
        android:text="@string/studyCard_hiragana"
        app:layout_constraintTop_toBottomOf="@id/studyCard_hiraganaTxt"
        app:layout_constraintRight_toRightOf="@id/studyCard_hiraganaTxt"/>

    <TextView
        android:id="@+id/studyCard_infoKatakana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:visibility="invisible"
        android:text="@string/studyCard_katakana"
        app:layout_constraintTop_toBottomOf="@id/studyCard_katakanaTxt"
        app:layout_constraintLeft_toLeftOf="@id/studyCard_katakanaTxt"/>

    <TextView
        android:id="@+id/studyCard_hiraganaTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        app:layout_constraintTop_toBottomOf="@id/studyCard_sound"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/studyCard_katakanaTxt"/>

    <TextView
        android:id="@+id/studyCard_infoimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:visibility="invisible"
        android:text="@string/studyCard_image"
        app:layout_constraintTop_toBottomOf="@id/studyCard_infoHiragana"
        app:layout_constraintLeft_toLeftOf="@id/studyCard_image"/>

    <TextView
        android:id="@+id/studyCard_infoWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:visibility="invisible"
        android:text="@string/studyCard_word"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/studyCard_image"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/studyCard_infoMeaning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:visibility="invisible"
        android:text="@string/studyCard_mean"
        android:layout_marginTop="10dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/studyCard_words"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/studyCard_katakanaTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        app:layout_constraintTop_toBottomOf="@id/studyCard_sound"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/studyCard_hiraganaTxt"/>

    <ImageView
        android:id="@+id/studyCard_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/ans_wrong"
        app:layout_constraintTop_toBottomOf="@id/studyCard_infoimage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/studyCard_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/studyCard_infoWord"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/studyCard_meaning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="35sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/studyCard_infoMeaning"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageButton
        android:id="@+id/studyCard_leftArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="studyCard_goPreStudyCard"
        android:src="@mipmap/leftarrow"
        android:contentDescription="@string/studyCard_larrow"
        android:background="@android:color/transparent"/>

    <ImageButton
        android:id="@+id/studyCard_rightArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="studyCard_goNextStudyCard"
        android:src="@mipmap/rarrow"
        android:contentDescription="@string/studyCard_rarrow"
        android:background="@android:color/transparent"/>

    <ImageButton
        android:id="@+id/studyCard_back"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@mipmap/back"
        android:onClick="studyCard_goBack"
        android:contentDescription="@string/studyCard_backArrow"
        android:background="@android:color/transparent"/>

    <ImageButton
        android:id="@+id/studyCard_btnInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:onClick="studyCard_setInfo"
        android:src="@mipmap/info"
        android:background="@android:color/transparent"
        android:contentDescription="@string/studyCard_info"/>


</android.support.constraint.ConstraintLayout>