<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/quiz_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="50sp"
        android:text="@string/menu_Quiz"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/quiz_gojuon"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="@string/quiz_gojuon"
        android:onClick="quiz_goQuizCard"
        app:layout_constraintTop_toBottomOf="@id/quiz_textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/quiz_word"/>

    <Button
        android:id="@+id/quiz_word"
        android:layout_gravity="bottom"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:text="@string/quiz_word"
        android:onClick="quiz_goQuizCard"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quiz_gojuon"/>

    <ImageButton
        android:id="@+id/quiz_back"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@mipmap/back"
        android:onClick="quiz_goBack"
        android:contentDescription="@string/studyCard_backArrow"
        android:background="@android:color/transparent"/>

    <ImageButton
        android:id="@+id/quiz_gojuonInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="@id/quiz_gojuon"
        app:layout_constraintLeft_toRightOf="@id/quiz_gojuon"
        android:onClick="quiz_setInfo"
        android:src="@mipmap/info"
        android:background="@android:color/transparent"
        android:contentDescription="@string/studyCard_info"/>

    <ImageButton
        android:id="@+id/quiz_wordInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintTop_toTopOf="@id/quiz_word"
        app:layout_constraintLeft_toRightOf="@id/quiz_word"
        android:onClick="quiz_setInfo"
        android:src="@mipmap/info"
        android:background="@android:color/transparent"
        android:contentDescription="@string/studyCard_info"/>

</android.support.constraint.ConstraintLayout>